kubernetes/email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: email-queue
  name: email-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: email-queue
  template:
    metadata:
      labels:
        io.kompose.service: email-queue
    spec:
      containers:
        - args:
            - php
            - artisan
            - queue:work
          image: antoniopapa/email:0.0.1
          name: email-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
