kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-backend
  template:
    metadata:
      labels:
        io.kompose.service: admin-backend
    spec:
      containers:
        - args:
            - php
            - artisan
            - config:cache;
            - php
            - artisan
            - serve
            - --host=0.0.0.0
          image: antoniopapa/admin:0.0.1
          name: admin-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8000
  selector:
    io.kompose.service: admin-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-queue
  name: admin-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-queue
  template:
    metadata:
      labels:
        io.kompose.service: admin-queue
    spec:
      containers:
        - args:
            - php
            - artisan
            - config:cache;
            - php
            - artisan
            - serve
            - queue:work
          image: admin-queue
          name: admin-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
