kubernetes/ambassador-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-frontend
  name: ambassador-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-frontend
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-frontend
    spec:
      containers:
        - image: antoniopapa/ambassador-frontend:0.0.1
          name: ambassador-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ambassador-frontend
  name: ambassador-frontend
spec:
  ports:
    - name: "ambassador-frontend"
      port: 3001
      targetPort: 80
  selector:
    io.kompose.service: ambassador-frontend
