kubernetes/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: checkout-backend
  name: checkout-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: checkout-backend
  template:
    metadata:
      labels:
        io.kompose.service: checkout-backend
    spec:
      containers:
        - args:
            - php
            - artisan
            - config:cache;
            - php
            - artisan
            - serve
            - --host=0.0.0.0
          image: antoniopapa/checkout:0.0.1
          name: checkout-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: checkout-backend
  name: checkout-backend
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8000
  selector:
    io.kompose.service: checkout-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: checkout-queue
  name: checkout-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: checkout-queue
  template:
    metadata:
      labels:
        io.kompose.service: checkout-queue
    spec:
      containers:
        - args:
            - php
            - artisan
            - config:cache;
            - php
            - artisan
            - serve
            - queue:work
          image: antoniopapa/checkout:0.0.1
          name: checkout-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
